Switch to static dependency list file instead of accessing the jar as a file system